# Loja_app

./: .coverage  .env.example  .env.test  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  Makefile  README.md  main.py  main_api.py  olve problemas de integração e performance no FastAPI  pytest.ini  requirements.txt  run-tests.ps1  run.ps1  run_backend.ps1  run_frontend.ps1  run_migrations.ps1  run_tests.ps1  run_tests.sh  setup.ps1  setup_database.py  tatus  te-recibo-parcelas  tgreSQL  tgres-only + Alembic test DB y limpieza de legacy infra  verificar_backend.ps1
alembic/: env.py
backend/: .coverage  .env.example  .flake8  CHANGELOG.md  README.md  alembic.ini  build.sh  conftest.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4031dc3f14ce_initial_schema.py  add_valor_ultima_parcela_column.py
backend/api/: deps.py  main.py  pagamentos_api.py
backend/config/: settings.py
backend/domain/: __init__.py  calculadora.py  exceptions.py  recibo.py  recibo_repository.py
backend/infrastructure/: database.py  storage.py
backend/loja_mini_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/services/: __init__.py  pagamento_service.py  recibo_repository.py
backend/tests/: conftest.py  test_api_pagamentos.py  test_api_pagamentos_errors.py  test_api_pagamentos_postgres_backend.py  test_health.py  test_integration_postgres.py  test_pagamento_service.py  test_postgres_repository.py  test_recibo.py
(+113 files in other folders)
