[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loja-mini-app-backend"
version = "0.1.0"
description = "Backend da aplicação Loja Mini App"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "flake8",
]

[tool.pytest.ini_options]
pythonpath = ".."
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "config*", "domain*", "infrastructure*", "services*"]